my-courses-chart/templates/api-allow.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: api-allow
spec:
  podSelector:
    matchLabels:
      app: courseapi
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: course-ui
      ports:
        - protocol: TCP
          port: 5000
