my-courses-chart/templates/db-allow.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: db-allow
spec:
  podSelector:
    matchLabels:
      app: mysql-app
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: courseapi
      ports:
        - protocol: TCP
          port: 3306
